EXPRESSJS + API = get temperature

--- a/Node.JS_Course/12_ExpressJStemplateEngine/package.json
+++ b/Node.JS_Course/12_ExpressJStemplateEngine/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "requests": "^0.3.0"
   }
 }
