--- a/RESTfullApi_MySQL/package.json
+++ b/RESTfullApi_MySQL/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
