MeRN project updated

--- a/Node.JS_Course/PROJECTS/MErN_loginform/package.json
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/app.js -e js,hbs"
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
     "mongoose": "^6.2.3"
