--- a/Node.JS_Course/PROJECTS/MErN_loginform/package.json
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3"
   }
 }
