--- a/Node.JS_Course/PROJECTS/MErN_loginform/package.json
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
