--- a/Node.JS_Course/PROJECTS/RBACapp/package.json
+++ b/Node.JS_Course/PROJECTS/RBACapp/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-"start": "node app.js",
-"dev": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0"
