--- a/Node.JS_Course/PROJECTS/RBACapp/package.json
+++ b/Node.JS_Course/PROJECTS/RBACapp/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0"
