--- a/Node.JS_Course/PROJECTS/RBACapp/package.json
+++ b/Node.JS_Course/PROJECTS/RBACapp/package.json
@@ -20,6 +20,8 @@
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "mongoose": "^6.4.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
