--- a/Node.JS_Course/PROJECTS/RBACapp/package.json
+++ b/Node.JS_Course/PROJECTS/RBACapp/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.8",
     "bcrypt": "^5.0.1",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
@@ -24,6 +26,10 @@
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "^3.1.7"
   }
+
 }
