--- a/Node.JS_Course/PROJECTS/RBACapp/package.json
+++ b/Node.JS_Course/PROJECTS/RBACapp/package.json
@@ -26,10 +26,10 @@
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.7"
   }
-
 }
