--- a/Node.JS_Course/PROJECTS/iChat/package.json
+++ b/Node.JS_Course/PROJECTS/iChat/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dicebear/avatars": "^4.10.3",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   }
