--- a/Node.JS_Course/PROJECTS/GraphQL/package.json
+++ b/Node.JS_Course/PROJECTS/GraphQL/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0"
