--- a/Node.JS_Course/14_Mongoose/package.json
+++ b/Node.JS_Course/14_Mongoose/package.json
@@ -2,13 +2,14 @@
   "name": "14_mongoose",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "mongoose": "^6.2.1"
   }
 }
