--- a/Typescript_Course/PROJECTS/Blueeit/package.json
+++ b/Typescript_Course/PROJECTS/Blueeit/package.json
@@ -24,8 +24,8 @@
     "@mantine/hooks": "^6.0.13",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -40,7 +40,8 @@
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "editorjs-react-renderer": "^3.5.1",
@@ -60,9 +61,9 @@
     "react-textarea-autosize": "^8.4.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
-    "tailwind-merge": "^1.12.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "uploadthing": "^4.0.0",
     "zod": "^3.21.4"
