--- a/Typescript_Course/PROJECTS/Blueeit/package.json
+++ b/Typescript_Course/PROJECTS/Blueeit/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Blueeit",
   "version": "0.1.0",
+  "description": "Create communities to connect beyond expertise.",
   "private": true,
   "scripts": {
     "dev": "next dev",
