--- a/Typescript_Course/PROJECTS/Blueeit/package.json
+++ b/Typescript_Course/PROJECTS/Blueeit/package.json
@@ -37,7 +37,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "@uploadthing/react": "^6.4.0",
+    "@uploadthing/react": "4.0.0",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -66,7 +66,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
-    "uploadthing": "^6.6.0",
+    "uploadthing": "4.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
