--- a/Typescript_Course/PROJECTS/Blueeit/package.json
+++ b/Typescript_Course/PROJECTS/Blueeit/package.json
@@ -26,6 +26,7 @@
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -43,7 +44,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.41.0",
